# kindle-mtg-commander-life-counter

./: .gitignore  CHANGELOG.md  LICENSE  README.md
design/: mtg-life-counter-preview.html
extensions/mtg-life-counter/: config.xml  menu.json
native/: meson.build
native/src/: device.c  device.h  game.c  game.h  layout.c  layout.h  main.c
native/tests/: run.sh  test_device.c  test_game.c  test_layout.c
scripts/: build-kindle.sh  install-to-kindle.sh  mtp-install.c  package-release.sh  release_tree.py
tests/: test_menu_json.py  test_release.py
